# zarya

./: .cursorrules  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  run.bat  test.bat  test_compact.bat  trias.bat  zarya_cli.bat  zarya_emu.bat
docs/: architecture.md  data_types.md  instruction_set.md  instructions.md  interrupts.md  progress.md  ternary_logic.md  trias.md
docs/future/: t.md
docs/misc/: conventions.md  notes.md  steps.md
include/: emulator.h  errors.h  instruction_defs.h  instructions.h  trit_ops.h  types.h  zarya_config.h  zarya_vm.h
programs/: add.tri  add.tro
src/: cli_emulator.c  emulator.c  tui_emulator.c
src/common/: trit_ops.c
src/trias/: ast.c  ast.h  codegen.c  codegen.h  lexer.c  lexer.h  main.c  parser.c  parser.h  registers.c  trias_instructions.c  trias_instructions.h
src/vm/: instructions.c  stack.c  stack.h  zarya_vm.c
tests/: test_arithmetic_instructions.c  test_common.c  test_common.h  test_comparison_instructions.c  test_control_instructions.c  test_full_chain.c  test_interrupt_instructions.c  test_logical_instructions.c  test_memory_instructions.c  test_pseudo_instructions.c  test_stack_instructions.c  test_trias.c  test_trits.c  test_vm.c
tools/: gen_docs.py
